display user profile image on the leaderboard(html based), replace the current profile picture when user upload new profile image, resize images when user upload profile picture, add the current session of user ID when the user store image

--- a/html/main.html
+++ b/html/main.html
@@ -64,8 +64,8 @@
 
     <br>
     <!-- upload images and display it -->
-    <h1>Upload Image to Server</h1>
-    <form action="/upload" method="post" enctype="multipart/form-data" class="resize">
+    <h1>Upload Your Profile Picture</h1>
+    <form action="/profile-upload" method="post" enctype="multipart/form-data" class="resize">
       <input type="file" name="image" required>
       <button type="submit">Upload</button>
     </form>
@@ -89,7 +89,10 @@
         <table>
           <tr>
             <td class="number">1</td>
-            <td class="name">Lee Taeyong</td>
+            <td class="profile-image">
+              <img src="./images/663b2c498e46b184a4f2506a" width="50" height="50" alt="Profile Image" />
+            </td>
+            <td class="name">John</td>
             <td class="points">
               258.244 <img class="gold-medal"
                 src="https://github.com/malunaridev/Challenges-iCodeThis/blob/master/4-leaderboard/assets/gold-medal.png?raw=true"
@@ -98,21 +101,33 @@
           </tr>
           <tr>
             <td class="number">2</td>
-            <td class="name">Mark Lee</td>
+            <td class="profile-image">
+              <img src="./images/663bef78f620baf80f9ab10f" width="50" height="50" alt="Profile Image" />
+            </td>
+            <td class="name">Declan</td>
             <td class="points">258.242</td>
           </tr>
           <tr>
             <td class="number">3</td>
-            <td class="name">Xiao Dejun</td>
+            <td class="profile-image">
+              <img src="./images/6642f052b8aafb305d4004a2" width="50" height="50" alt="Profile Image" />
+            </td>
+            <td class="name">Yuho</td>
             <td class="points">258.223</td>
           </tr>
           <tr>
             <td class="number">4</td>
+            <td class="profile-image">
+              <img src="#" width="50" height="50" alt="Profile Image" />
+            </td>
             <td class="name">Qian Kun</td>
             <td class="points">258.212</td>
           </tr>
           <tr>
             <td class="number">5</td>
+            <td class="profile-image">
+              <img src="#" width="50" height="50" alt="Profile Image" />
+            </td>
             <td class="name">Johnny Suh</td>
             <td class="points">258.208</td>
           </tr>
