Added Diet page

--- a/html/main.html
+++ b/html/main.html
@@ -44,7 +44,7 @@
     <a href="fitTasks">
       <input type="image" class="navButton" src="../img/FitnessButton.png">
     </a>
-    <a href="fitTasks">
+    <a href="dietTasks">
       <input type="image" class="navButton" src="../img/DietButton.png">
     </a>
   </nav>
