limited users to have only one profile img, setting a default profile img

--- a/html/main.html
+++ b/html/main.html
@@ -117,7 +117,7 @@
           <tr>
             <td class="number">4</td>
             <td class="profile-image">
-              <img src="#" width="50" height="50" alt="Profile Image" />
+              <img src="./images/6642f052b8aafb305d40123" width="50" height="50" alt="Profile Image" />
             </td>
             <td class="name">Qian Kun</td>
             <td class="points">258.212</td>
@@ -125,7 +125,7 @@
           <tr>
             <td class="number">5</td>
             <td class="profile-image">
-              <img src="#" width="50" height="50" alt="Profile Image" />
+              <img src="./images/6642f052b8aafb305d41223" width="50" height="50" alt="Profile Image" />
             </td>
             <td class="name">Johnny Suh</td>
             <td class="points">258.208</td>
