--- a/html/body-scan.html
+++ b/html/body-scan.html
@@ -3,25 +3,32 @@
 
 <head>
     <title>Welcome to FitUp</title>
-  <meta name="Comp2800 template" content="FitUp">
+    <meta name="Comp2800 template" content="FitUp">
 
-  <!-- Required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="/styles/body-scan.css" />
+    <style>
+        video {
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 
 <body>
-    <header>
-        <h1>A simple three.js app</h1>
-    </header>
 
-    <main>
+    <!-- <main>
         <div id="container3D"></div>
-    </main>
-
-    <script type="module" src="/scripts/body-scan.js"></script>
+    </main> -->
+    <video loop="" autoplay="" muted="" playsinline="">
+        <source src="/models/male-body/scan-body.mp4" type="video/mp4">
+    </video>   
+    <!-- <script type="module" src="/scripts/body-scan.js"></script>  -->
 </body>
 
 </html>
