Create and style personalized questions for training plan; Compile queries and make API requests for AI response.

--- a/html/ai-training-female-body-scan-result.html
+++ b/html/ai-training-female-body-scan-result.html
@@ -19,6 +19,8 @@
         <div id="container3D"></div>
     </main>
 
+    <div id="meet-coach">Meet Your Coach</div>
+
     <script type="module" src="/scripts/ai-training-female-body-scan-result.js"></script> 
 </body>
 
