--- a/html/ai-training-male-body-scan-result.html
+++ b/html/ai-training-male-body-scan-result.html
@@ -11,6 +11,19 @@
 
     <link rel="stylesheet" type="text/css" href="/styles/body-scan.css" />
    
+    <style>
+        #meet-coach {
+            height: 80px;
+            width: 200px;
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: (-50%);
+            font-size: 20px;
+            font-weight: bold;
+            background-color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -18,6 +31,9 @@
     <main>
         <div id="container3D"></div>
     </main>
+
+    <div id="meet-coach">Meet Your Coach</div>
+
 
     <script type="module" src="/scripts/ai-training-male-body-scan-result.js"></script> 
 </body>
