--- a/html/ai-training-meet-coach.html
+++ b/html/ai-training-meet-coach.html
@@ -6,15 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Train with an AI Coach</title>
    
-    <link rel="stylesheet" href="/styles/ai-training-home.css"></link>
+    <link rel="stylesheet" href="/styles/ai-training-meet-coach.css"></link>
 
+    <style>
+
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      #video-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+
+  #video-background video {
+    object-fit: cover;
+    width: 100%;
+    height: 150%;
+  }
+    </style>
 </head>
 
 <body>
-   <div id="container">
-    <div id="background-img"></div>
-    <div id="personalize-training">Personalize Training and Workout</div>
+   
+    <!-- <div id="background-img"></div> -->
+    <!-- <div id="personalize-training">Personalize Training and Workout</div>
+    </div> -->
+    <div id="video-background">
+      <video loop="" autoplay="" muted="" playsinline="">
+        <source src="/models/ai-head.mp4" type="video/mp4">
+    </video>
     </div>
+    
+    
 
     <footer id="footer">
         <div id="home-weight">
@@ -52,7 +81,6 @@
         </div>
       </footer>
 
-      <script src="/scripts/ai-training-home.js"></script>
 </body>
 
 </html>
