--- a/html/ai-training-male-body-scan.html
+++ b/html/ai-training-male-body-scan.html
@@ -25,13 +25,11 @@
 
 <body>
 
-    <!-- <main>
-        <div id="container3D"></div>
-    </main> -->
     <video loop="" autoplay="" muted="" playsinline="">
-        <source src="/models/male-body/scan-body.mp4" type="video/mp4">
+        <source src="/img/male-body-scan.mp4" type="video/mp4">
     </video>   
-    <!-- <script type="module" src="/scripts/body-scan.js"></script>  -->
+
+    <script src="/scripts/ai-training-male-body-scan.js"></script>
 </body>
 
 </html>
