Add Google Text to Speech API to AI chat and AI recommendation page.

--- a/html/ai-training-recommendation.html
+++ b/html/ai-training-recommendation.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="/styles/ai-training-recommendation.css">
   </link>
 
-
 </head>
 
 <body>
 
+  <div id="audio-container"></div>
   <div id="ai-recommendation"></div>
+  
 
   <footer id="footer">
     <div id="home-weight">
@@ -67,6 +68,7 @@
   </footer>
 
   <script src="/scripts/ai-training-recommendation.js"></script>
+
 </body>
 
 </html>
