--- a/html/body-motion-capture.html
+++ b/html/body-motion-capture.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+
+  
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
 
   <!-- Require the peer dependencies of pose-detection. -->
@@ -19,7 +23,6 @@
 
 
 
-  <meta charset="utf-8" />
 
   <style>
     /* html, */
@@ -30,7 +33,7 @@
 
     /* #camera-feed {
       width: 100%;
-      height: 100vh;
+      height: 100%;
       object-fit: cover;
       margin: 0;
       padding: 0;
@@ -38,6 +41,11 @@
 
     canvas {
       display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      margin: 0;
+      padding: 0;;
     }
   </style>
 </head>
