--- a/html/body-motion-capture.html
+++ b/html/body-motion-capture.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <head>
-
-  
+  <title>FitUp - Body Motion Capture</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.js"></script>
@@ -21,33 +20,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection"></script>
 
-
-
-
-  <style>
-    /* html, */
-    body {
-      margin: 0;
-      padding: 0;
-    }
-
-    /* #camera-feed {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      margin: 0;
-      padding: 0;
-    } */
-
-    canvas {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      margin: 0;
-      padding: 0;;
-    }
-  </style>
+  <link rel="stylesheet" href="/styles/body-motion-capture.css"/>
 </head>
 
 <body>
