Complete styling for aichat-log.

--- a/html/aichat-log.html
+++ b/html/aichat-log.html
@@ -57,22 +57,14 @@
       </div>
     </div>
 
-
     <div id="chat-log-here">
-      <div id="user-input-test"></div>
-      <div id="ai-response-test"></div>
     </div>
 
-
-    <template>
-      <div id="user">
-        <div id="user-avatar"></div>
-        <div id="user-input"></div>
-      </div>
-      <div id="ai">
-        <div id="ai-avatar"></div>
-        <div id="ai-response"></div>
-      </div>
+    <template id="chat-log-template">
+      <div class="chat-message">
+        <img class="avatar">
+        <div class="chat-text">
+        </div>
     </template>
 
 
