Set parameters for AI chat model's response accuracy.

--- a/html/aichat-log.html
+++ b/html/aichat-log.html
@@ -16,6 +16,9 @@
 
   <div id="content-container">
     <div id="top-nav">
+      <video loop="" autoplay="" muted="" playsinline="">
+      <source src="/img/friendly-bot.mp4" type="video/mp4">
+    </video>
       <div id="go-back">
         <svg id="go-back-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
@@ -25,7 +28,7 @@
         </svg>
       </div>
       <div id="coach-info">
-        Coach Mixtral.AI
+        Mixtral.AI Assistant
         <p id="ai-info">mixtral-8x7b-32768</p>
       </div>
       <div id="setting">
