Add styling, navigation, and example metrics to body scan result pages.

--- a/html/ai-training-male-body-scan-result.html
+++ b/html/ai-training-male-body-scan-result.html
@@ -15,6 +15,15 @@
 
 <body>
 
+  <div id="scan-result">Your body scan result</div>
+  
+  <div id="scan-metrics">
+    <div id="height" class="metrics">Height: <span id="height-metric">...</span> cm</div>
+    <div id="weight" class="metrics">Weight: <span id="weight-metric">...</span> g</div>
+    <div id="bmi" class="metrics">BMI: <span id="bmi-metric">...</span> </div>
+    <div id="muscle-mass" class="metrics">Muscle Mass: <span id="mus-mass-metric">...</span> </div>
+  </div>
+  
     <main>
         <div id="container3D"></div>
     </main>
