Add styling to body-motion-capture page; Configure AI instructions for todo tasks in body-motion-capture page.

--- a/html/ai-training-recommendation.html
+++ b/html/ai-training-recommendation.html
@@ -53,7 +53,7 @@
               fill="white"></path>
           </svg>
         </div>
-        <div id="running" tabindex="0" class="icon-container">
+        <div id="running" class="icon-container">
           <svg id="running-icon" width="40" height="40" viewBox="0 0 24 24" fill="white"
             xmlns="http://www.w3.org/2000/svg">
             <path
