--- a/html/body-motion-capture.html
+++ b/html/body-motion-capture.html
@@ -45,6 +45,11 @@
 
   <video id="camera-feed" autoplay muted></video>
 
+  <div id="instruction">
+    <div id="instruction-text"></id>
+    <div id="media-display"></id>
+  </div>
+
   <footer id="footer">
     <div id="home-weight">
       <div id="home">
