updated styling for the rank progress page

--- a/html/aichat-log.html
+++ b/html/aichat-log.html
@@ -52,7 +52,7 @@
       </div>
       <div id="limit">Limitations</div>
       <div id="limit-noti">
-        No chatbots is perfect. Just like human being, <span id='ai-model-name'>Mixtral AI</span>'s knowledge is limited
+        No chatbot is perfect. Just like human beings, <span id='ai-model-name'>Mixtral AI</span>'s knowledge is limited
         to 2053.
       </div>
     </div>
