added miscellanious stuff

--- a/html/aichat-loading.html
+++ b/html/aichat-loading.html
@@ -18,7 +18,7 @@
       Initiating AI Model...
     </div>
     <div id="message">
-      Please wait while we create your chat
+      Please wait while we create your chat.
     </div>
     <div class="loading-bar">
       <div class="loading-progress"></div>
