Added favicon to some pages

--- a/html/ai-training-camera-feed.html
+++ b/html/ai-training-camera-feed.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scan with Camera</title>
     
+    <!-- favicon -->
+    <link rel="icon" href="/img/fitup.png">
+
     <link rel="stylesheet" href="/styles/ai-training-camera-feed.css">
 </head>
 
