--- a/html/ai-training-female-body-scan-result.html
+++ b/html/ai-training-female-body-scan-result.html
@@ -9,6 +9,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- favicon -->
+    <link rel="icon" href="/img/fitup.png">
+
   <link rel="stylesheet" type="text/css" href="/styles/body-scan.css" />
 
 </head>
