--- a/html/ai-training-questions.html
+++ b/html/ai-training-questions.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Train with an AI Coach</title>
 
+  <!-- favicon -->
+  <link rel="icon" href="/img/fitup.png">
+
   <!-- Bootstrap Library CSS CDN go here -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -29,11 +32,11 @@
 
   <div id="top-nav">
     <a id="go-back">
-    <svg id="go-back-icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path
-        d="M17 3L10.6648 5.7151C10.231 5.90101 9.86061 6.20908 9.59882 6.60178V6.60178C7.41955 9.87068 7.41955 14.1293 9.59882 17.3982V17.3982C9.86061 17.7909 10.231 18.099 10.6648 18.2849L17 21"
-        stroke="orange" stroke-width="2" stroke-linejoin="round" />
-    </svg>
+      <svg id="go-back-icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M17 3L10.6648 5.7151C10.231 5.90101 9.86061 6.20908 9.59882 6.60178V6.60178C7.41955 9.87068 7.41955 14.1293 9.59882 17.3982V17.3982C9.86061 17.7909 10.231 18.099 10.6648 18.2849L17 21"
+          stroke="orange" stroke-width="2" stroke-linejoin="round" />
+      </svg>
     </a>
     <div id="setting"></div>
     <svg id="setting-icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -46,8 +49,8 @@
     </svg>
   </div>
 
-  <div id="progress-bar" class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0"
-    aria-valuemax="100">
+  <div id="progress-bar" class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25"
+    aria-valuemin="0" aria-valuemax="100">
     <div class="progress-bar" style="width: 25%">0%</div>
   </div>
 
@@ -55,7 +58,9 @@
 
     <div id="goal-card" class="card">
       <!-- Card 1 content -->
-      <div id="whatfitnessgoals"><h2>What are your fitness goals?</h2></div>
+      <div id="whatfitnessgoals">
+        <h2>What are your fitness goals?</h2>
+      </div>
       <div id="lose-weight" class="form-check goal">
         <svg class="icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" clip-rule="evenodd"
@@ -101,9 +106,9 @@
             d="M7.52272 5.55262L8.57989 6.87408C9.23001 7.68673 9.37084 7.82574 9.52806 7.9013C9.68528 7.97687 9.88181 8 10.9225 8H13.0775C14.1182 8 14.3147 7.97687 14.4719 7.9013C14.6292 7.82574 14.77 7.68673 15.4201 6.87409L16.4773 5.55264C13.5029 5.19926 10.4971 5.19925 7.52272 5.55262Z"
             fill="black" />
         </svg>
-        <input class="form-check-input" type="checkbox" value="" id="Try AI" >
+        <input class="form-check-input" type="checkbox" value="" id="Try AI">
         <label class="form-check-label" for="flexCheckChecked">
-          Try AI 
+          Try AI
         </label>
       </div>
       <div id="try-app" class="form-check goal">
@@ -258,17 +263,25 @@
         <div class="topic-text">Skating</div>
       </div>
       <div id="cardio" class="icon-container">
-        <svg class="topic-icon" width="50" height="50"   viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M10.1622 5.16219L11.6807 6.68073C11.857 6.85701 12.1428 6.85701 12.3191 6.68074L13.8376 5.16219C15.1289 3.8709 17.1016 3.55077 18.735 4.36746C19.5561 4.77799 20.2218 5.44376 20.6324 6.26483L20.8362 6.67258C21.5743 8.14862 21.625 9.87473 20.9749 11.3916L20.931 11.4941C19.6779 14.4181 17.5057 16.8538 14.7436 18.4321L13.7799 18.9828C12.677 19.613 11.3229 19.613 10.2199 18.9828L9.25619 18.4321C6.49417 16.8538 4.32198 14.4181 3.06886 11.4941L3.02491 11.3916C2.37484 9.87473 2.42556 8.14862 3.16358 6.67258L3.36746 6.26483C3.77799 5.44376 4.44376 4.77799 5.26483 4.36746C6.8982 3.55077 8.8709 3.8709 10.1622 5.16219Z" fill="black"/>
-          </svg>          
-          <div class="topic-text">Cardio</div>
+        <svg class="topic-icon" width="50" height="50" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M10.1622 5.16219L11.6807 6.68073C11.857 6.85701 12.1428 6.85701 12.3191 6.68074L13.8376 5.16219C15.1289 3.8709 17.1016 3.55077 18.735 4.36746C19.5561 4.77799 20.2218 5.44376 20.6324 6.26483L20.8362 6.67258C21.5743 8.14862 21.625 9.87473 20.9749 11.3916L20.931 11.4941C19.6779 14.4181 17.5057 16.8538 14.7436 18.4321L13.7799 18.9828C12.677 19.613 11.3229 19.613 10.2199 18.9828L9.25619 18.4321C6.49417 16.8538 4.32198 14.4181 3.06886 11.4941L3.02491 11.3916C2.37484 9.87473 2.42556 8.14862 3.16358 6.67258L3.36746 6.26483C3.77799 5.44376 4.44376 4.77799 5.26483 4.36746C6.8982 3.55077 8.8709 3.8709 10.1622 5.16219Z"
+            fill="black" />
+        </svg>
+        <div class="topic-text">Cardio</div>
       </div>
       <div id="other" class="icon-container">
-        <svg class="topic-icon" width="50" height="50"   viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M10.6 10.3002C10.2 11.1002 10.2 12.0002 10.6 12.8002C11.4 13.2002 12.3 13.2002 13.1 12.8002C13.5 12.0002 13.5 11.1002 13.1 10.3002C12.4 9.9002 11.4 9.9002 10.6 10.3002Z" fill="black"/>
-          <path d="M19.8 12.5002C19.8 12.2002 19.9 11.9002 19.9 11.6002C19.9 11.3002 19.9 11.0002 19.8 10.7002C19.9 10.6002 20.1 10.5002 20.2 10.3002C20.6 9.9002 20.8 9.4002 20.8 8.8002C20.7 7.4002 20 6.0002 18.7 5.2002C18.2 4.9002 17.7 4.8002 17.1 5.0002C16.9 5.0002 16.8 5.1002 16.6 5.2002C16.1 4.8002 15.6 4.5002 15 4.3002C15 4.1002 14.9 4.0002 14.9 3.8002C14.8 3.3002 14.4 2.8002 13.9 2.6002C12.6 1.9002 11.1 1.9002 9.8 2.6002C9.3 2.7002 9 3.2002 8.8 3.7002C8.8 3.9002 8.7 4.0002 8.7 4.2002C8.2 4.5002 7.6 4.8002 7.2 5.1002C7 5.1002 6.8 5.0002 6.7 5.0002C6.1 4.8002 5.5 4.9002 5.1 5.2002C3.9 6.0002 3.1 7.4002 3 8.8002C3 9.4002 3.2 9.9002 3.6 10.3002C3.7 10.4002 3.8 10.5002 4 10.7002C4 11.0002 3.9 11.3002 3.9 11.6002C3.9 11.9002 3.9 12.2002 4 12.5002C3.9 12.6002 3.7 12.7002 3.6 12.9002C3.2 13.2002 3 13.8002 3 14.3002C3.1 15.8002 3.9 17.1002 5.1 17.9002C5.6 18.2002 6.1 18.3002 6.7 18.1002C6.8 18.1002 7 18.0002 7.2 18.0002C7.7 18.4002 8.2 18.7002 8.8 18.9002C8.8 19.1002 8.9 19.2002 8.9 19.4002C9 19.9002 9.4 20.4002 9.9 20.6002C11.2 21.3002 12.7 21.3002 14 20.6002C14.5 20.3002 14.9 19.9002 15 19.4002C15 19.2002 15.1 19.1002 15.1 18.9002C15.7 18.7002 16.2 18.4002 16.7 18.0002C16.9 18.1002 17 18.1002 17.2 18.2002C17.7 18.4002 18.3 18.3002 18.8 18.0002C20 17.2002 20.8 15.9002 20.9 14.4002C20.9 13.8002 20.7 13.3002 20.3 12.9002C20.1 12.7002 20 12.6002 19.8 12.5002ZM14.9 13.7002C14.7 14.1002 14.4 14.4002 14 14.6002C13.3 14.9002 12.6 15.1002 11.8 15.1002C11 15.1002 10.3 14.9002 9.6 14.6002C9.2 14.4002 8.9 14.1002 8.7 13.7002C8 12.3002 8 10.7002 8.7 9.4002C9.1 9.0002 9.4 8.7002 9.7 8.5002C11.1 7.8002 12.7 7.8002 14 8.5002C14.4 8.7002 14.7 9.0002 14.9 9.4002C15.6 10.8002 15.6 12.4002 14.9 13.7002Z" fill="black"/>
-          </svg>          
-          <div class="topic-text">Other</div>
+        <svg class="topic-icon" width="50" height="50" viewBox="0 0 24 24" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            d="M10.6 10.3002C10.2 11.1002 10.2 12.0002 10.6 12.8002C11.4 13.2002 12.3 13.2002 13.1 12.8002C13.5 12.0002 13.5 11.1002 13.1 10.3002C12.4 9.9002 11.4 9.9002 10.6 10.3002Z"
+            fill="black" />
+          <path
+            d="M19.8 12.5002C19.8 12.2002 19.9 11.9002 19.9 11.6002C19.9 11.3002 19.9 11.0002 19.8 10.7002C19.9 10.6002 20.1 10.5002 20.2 10.3002C20.6 9.9002 20.8 9.4002 20.8 8.8002C20.7 7.4002 20 6.0002 18.7 5.2002C18.2 4.9002 17.7 4.8002 17.1 5.0002C16.9 5.0002 16.8 5.1002 16.6 5.2002C16.1 4.8002 15.6 4.5002 15 4.3002C15 4.1002 14.9 4.0002 14.9 3.8002C14.8 3.3002 14.4 2.8002 13.9 2.6002C12.6 1.9002 11.1 1.9002 9.8 2.6002C9.3 2.7002 9 3.2002 8.8 3.7002C8.8 3.9002 8.7 4.0002 8.7 4.2002C8.2 4.5002 7.6 4.8002 7.2 5.1002C7 5.1002 6.8 5.0002 6.7 5.0002C6.1 4.8002 5.5 4.9002 5.1 5.2002C3.9 6.0002 3.1 7.4002 3 8.8002C3 9.4002 3.2 9.9002 3.6 10.3002C3.7 10.4002 3.8 10.5002 4 10.7002C4 11.0002 3.9 11.3002 3.9 11.6002C3.9 11.9002 3.9 12.2002 4 12.5002C3.9 12.6002 3.7 12.7002 3.6 12.9002C3.2 13.2002 3 13.8002 3 14.3002C3.1 15.8002 3.9 17.1002 5.1 17.9002C5.6 18.2002 6.1 18.3002 6.7 18.1002C6.8 18.1002 7 18.0002 7.2 18.0002C7.7 18.4002 8.2 18.7002 8.8 18.9002C8.8 19.1002 8.9 19.2002 8.9 19.4002C9 19.9002 9.4 20.4002 9.9 20.6002C11.2 21.3002 12.7 21.3002 14 20.6002C14.5 20.3002 14.9 19.9002 15 19.4002C15 19.2002 15.1 19.1002 15.1 18.9002C15.7 18.7002 16.2 18.4002 16.7 18.0002C16.9 18.1002 17 18.1002 17.2 18.2002C17.7 18.4002 18.3 18.3002 18.8 18.0002C20 17.2002 20.8 15.9002 20.9 14.4002C20.9 13.8002 20.7 13.3002 20.3 12.9002C20.1 12.7002 20 12.6002 19.8 12.5002ZM14.9 13.7002C14.7 14.1002 14.4 14.4002 14 14.6002C13.3 14.9002 12.6 15.1002 11.8 15.1002C11 15.1002 10.3 14.9002 9.6 14.6002C9.2 14.4002 8.9 14.1002 8.7 13.7002C8 12.3002 8 10.7002 8.7 9.4002C9.1 9.0002 9.4 8.7002 9.7 8.5002C11.1 7.8002 12.7 7.8002 14 8.5002C14.4 8.7002 14.7 9.0002 14.9 9.4002C15.6 10.8002 15.6 12.4002 14.9 13.7002Z"
+            fill="black" />
+        </svg>
+        <div class="topic-text">Other</div>
       </div>
     </div>
   </div>
@@ -286,7 +299,7 @@
           fill="black" />
       </svg>
     </div>
-    
+
     <div id="continue-ctn">
       <span id='continue'>Continue</span>
       <div id="continue-btn">
