--- a/html/aichat-config.html
+++ b/html/aichat-config.html
@@ -5,6 +5,9 @@
   <title>Groq Chat Completion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- favicon -->
+  <link rel="icon" href="/img/fitup.png">
+
   <link rel="stylesheet" href="/styles/aichat-config.css">
 </head>
 
@@ -16,7 +19,7 @@
       <!-- <img id="ai-assistant" src="../img/ai-assistant.gif" alt="ai-assistant"> -->
       <video loop="" autoplay="" muted="" playsinline="">
         <source id="video" src="/img/friendly-bot.mp4" type="video/mp4">
-    </video> 
+      </video>
     </div>
     <div id="go-back"></div>
     <svg id="go-back-icon" width="32" height="32" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
