--- a/html/aichat-log.html
+++ b/html/aichat-log.html
@@ -8,6 +8,9 @@
     integrity="sha384-cPwlPLvBTa3sKAgddT6krw0cJat7egBga3DJepJyrLl4Q9/5WLra3rrnMcyTyOnh"
     crossorigin="anonymous"></script>
 
+  <!-- favicon -->
+  <link rel="icon" href="/img/fitup.png">
+
   <link rel="stylesheet" href="/styles/aichat-log.css">
 
 </head>
@@ -17,8 +20,8 @@
   <div id="content-container">
     <div id="top-nav">
       <video loop="" autoplay="" muted="" playsinline="">
-      <source src="/img/friendly-bot.mp4" type="video/mp4">
-    </video>
+        <source src="/img/friendly-bot.mp4" type="video/mp4">
+      </video>
       <div id="go-back">
         <svg id="go-back-icon" width="32" height="32" viewBox="0 0 24 24" fill="none"
           xmlns="http://www.w3.org/2000/svg">
@@ -93,7 +96,8 @@
     </form>
   </div>
 
-  <footer>  <div id="audio-container"></div>
+  <footer>
+    <div id="audio-container"></div>
   </footer>
 
   <script src="/scripts/aichat-log.js"></script>
